Completed Automation of 2 scenarios

--- a/DivyaLNarayan/serenity.properties
+++ b/DivyaLNarayan/serenity.properties
@@ -1,7 +1,7 @@
 serenity.project.name=DivyaLNarayan
 
 webdriver.driver=chrome
-webdriver.chrome.driver=src/test/resource/drivers/chromedriver-mac-64bit
+webdriver.chrome.driver=src/test/resource/drivers/chromedriver.exe
 
 serenity.browser.width=1280
 serenity.browser.height=960
